# soco-scribbler

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SOCO_SCRIBBLER_LOGGER.md  config.py  docker-compose.yml  pylast.py  pyproject.toml  sonos_lastfm.py  utils.py
src/soco_scribbler/: cli.py  config.py  soco_scribbler.py  sonos_lastfm.py
src/sonos_lastfm/: cli.py  sonos_lastfm.py
