[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soco-scribbler"
version = "0.1.5"
description = "Automatically scribble what's playing on your Sonos speakers. Pus to services like Last.fm, and others."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Denis Moskalets", email = "denya.msk@gmail.com" },
    { name = "Brian M. Dennis", email = "bmd@pirateninja.dev" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["sonos", "lastfm", "scrobbler", "music", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "soco>=0.27.0",
    "pylast>=5.1.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.2.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "keyring>=24.3.0",
    "sqlite-utils>=3.38",
]

[project.urls]
Homepage = "https://github.com/crossjam/soco-scribbler"
Issues = "https://github.com/crossjam/soco-scribbler/issues"

[project.scripts]
sonos-lastfm = "soco_scribbler:main"
soco-scribbler = "soco_scribbler.soco_scribbler:main"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["soco_scribbler"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["ALL"]
lint.ignore = ["PLW0603"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6 
